finish attention model

--- a/src/cvt_paddle.ipynb
+++ b/src/cvt_paddle.ipynb
@@ -210,6 +210,22 @@
    "outputs": [],
    "source": [
     "class Attention(nn.Module):\n",
+    "    \"\"\" Attention module\n",
+    "    Attributes:\n",
+    "        dim_in: numebr of input dim\n",
+    "        dim_out: number of output dum\n",
+    "        num_heads: \n",
+    "        qkv_bias=False\n",
+    "        attn_drop=0.,\n",
+    "        proj_drop=0.\n",
+    "        method='dw_bn' generate projection method \n",
+    "        kernel_size=3  conv kernel size \n",
+    "        stride_kv=1 calculat k,v with conv , with paramer stride \n",
+    "        stride_q=1 calculat qwith conv , with paramer stride ,this stride can be different from stride_kv=1\n",
+    "        padding_kv=1  calculat k,v with conv , with paramer paddding\n",
+    "        padding_q=1 calculat q with conv , with paramer paddding\n",
+    "        with_cls_token=True ,if label is given\n",
+    "    \"\"\"\n",
     "    def __init__(self,\n",
     "                 dim_in,\n",
     "                 dim_out,\n",
@@ -227,6 +243,7 @@
     "                 **kwargs\n",
     "                 ):\n",
     "        super().__init__()\n",
+    "        #init to save the pararm\n",
     "        self.stride_kv = stride_kv\n",
     "        self.stride_q = stride_q\n",
     "        self.dim = dim_out\n",
@@ -300,7 +317,7 @@
     "        return proj\n",
     "\n",
     "    def forward_conv(self, x, h, w):\n",
-    "        if self.with_cls_token:\n",
+    "        if self.with_cls_token: # spilt token from x\n",
     "            cls_token, x = paddle.split(x, [1, h*w], 1)\n",
     "\n",
     "        x =  PaddleRearrange(x, 'b (h w) c -> b c h w', h=h, w=w)\n",
@@ -332,98 +349,23 @@
     "            self.conv_proj_q is not None\n",
     "            or self.conv_proj_k is not None\n",
     "            or self.conv_proj_v is not None\n",
-    "        ):\n",
+    "        ):#if not generate q,k,v with Linear param\n",
     "            q, k, v = self.forward_conv(x, h, w)\n",
-    "\n",
-    "        q =  PaddleRearrange(self.proj_q(q), 'b t (h d) -> b h t d', h=self.num_heads)\n",
+    "        #now q,k,v is b (h w) c\n",
+    "        q =  PaddleRearrange(self.proj_q(q), 'b t (h d) -> b h t d', h=self.num_heads)#先扩宽token的维度，然后再实现mult-head，最后的结构是’b,h,t,d‘\n",
     "        k =  PaddleRearrange(self.proj_k(k), 'b t (h d) -> b h t d', h=self.num_heads)\n",
     "        v =  PaddleRearrange(self.proj_v(v), 'b t (h d) -> b h t d', h=self.num_heads)\n",
     "\n",
-    "        attn_score = paddle.einsum('bhlk,bhtk->bhlt', [q, k]) * self.scale\n",
+    "        attn_score = paddle.einsum('bhlk,bhtk->bhlt', [q, k]) * self.scale # 先按照axis=3乘，后*scale，实现q*k/sqort(d_k),\n",
     "        attn = paddle.nn.functional.softmax(attn_score, dim=-1)\n",
     "        attn = self.attn_drop(attn)\n",
-    "        x = paddle.einsum('bhlt,bhtv->bhlv', [attn, v])\n",
+    "        x = paddle.einsum('bhlt,bhtv->bhlv', [attn, v]) # 将attention得到概率值与value信息值相乘得到结果，结构是，b,h,t,d\n",
     "        x =  PaddleRearrange(x, 'b h t d -> b t (h d)')\n",
     "\n",
     "        x = self.proj(x)\n",
     "        x = self.proj_drop(x)\n",
     "\n",
-    "        return x\n",
-    "\n",
-    "    @staticmethod\n",
-    "    def compute_macs(module, input, output):\n",
-    "        # T: num_token\n",
-    "        # S: num_token\n",
-    "        input = input[0]\n",
-    "        flops = 0\n",
-    "\n",
-    "        _, T, C = input.shape\n",
-    "        H = W = int(np.sqrt(T-1)) if module.with_cls_token else int(np.sqrt(T))\n",
-    "\n",
-    "        H_Q = H / module.stride_q\n",
-    "        W_Q = H / module.stride_q\n",
-    "        T_Q = H_Q * W_Q + 1 if module.with_cls_token else H_Q * W_Q\n",
-    "\n",
-    "        H_KV = H / module.stride_kv\n",
-    "        W_KV = W / module.stride_kv\n",
-    "        T_KV = H_KV * W_KV + 1 if module.with_cls_token else H_KV * W_KV\n",
-    "\n",
-    "        # C = module.dim\n",
-    "        # S = T\n",
-    "        # Scaled-dot-product macs\n",
-    "        # [B x T x C] x [B x C x T] --> [B x T x S]\n",
-    "        # multiplication-addition is counted as 1 because operations can be fused\n",
-    "        flops += T_Q * T_KV * module.dim\n",
-    "        # [B x T x S] x [B x S x C] --> [B x T x C]\n",
-    "        flops += T_Q * module.dim * T_KV\n",
-    "\n",
-    "        if (\n",
-    "            hasattr(module, 'conv_proj_q')\n",
-    "            and hasattr(module.conv_proj_q, 'conv')\n",
-    "        ):\n",
-    "            params = sum(\n",
-    "                [\n",
-    "                    p.numel()\n",
-    "                    for p in module.conv_proj_q.conv.parameters()\n",
-    "                ]\n",
-    "            )\n",
-    "            flops += params * H_Q * W_Q\n",
-    "\n",
-    "        if (\n",
-    "            hasattr(module, 'conv_proj_k')\n",
-    "            and hasattr(module.conv_proj_k, 'conv')\n",
-    "        ):\n",
-    "            params = sum(\n",
-    "                [\n",
-    "                    p.numel()\n",
-    "                    for p in module.conv_proj_k.conv.parameters()\n",
-    "                ]\n",
-    "            )\n",
-    "            flops += params * H_KV * W_KV\n",
-    "\n",
-    "        if (\n",
-    "            hasattr(module, 'conv_proj_v')\n",
-    "            and hasattr(module.conv_proj_v, 'conv')\n",
-    "        ):\n",
-    "            params = sum(\n",
-    "                [\n",
-    "                    p.numel()\n",
-    "                    for p in module.conv_proj_v.conv.parameters()\n",
-    "                ]\n",
-    "            )\n",
-    "            flops += params * H_KV * W_KV\n",
-    "\n",
-    "        params = sum([p.numel() for p in module.proj_q.parameters()])\n",
-    "        flops += params * T_Q\n",
-    "        params = sum([p.numel() for p in module.proj_k.parameters()])\n",
-    "        flops += params * T_KV\n",
-    "        params = sum([p.numel() for p in module.proj_v.parameters()])\n",
-    "        flops += params * T_KV\n",
-    "        params = sum([p.numel() for p in module.proj.parameters()])\n",
-    "        flops += params * T\n",
-    "\n",
-    "        module.__flops__ += flops\n",
-    "\n"
+    "        return x#b,t,(h,d)"
    ]
   },
   {
