--- a/src/cvt_paddle.ipynb
+++ b/src/cvt_paddle.ipynb
@@ -16,7 +16,11 @@
     "from collections.abc import Iterable\n",
     "from numpy import repeat\n",
     "\n",
-    "from collections import OrderedDict"
+    "from collections import OrderedDict\n",
+    "\n",
+    "import logging\n",
+    "import os\n",
+    "import scripy"
    ]
   },
   {
@@ -423,6 +427,275 @@
     "        x = x + self.drop_path(self.mlp(self.norm2(x)))\n",
     "\n",
     "        return x\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "输入是图片，输出是特征图和cls_token\n",
+    "图片数据先经过ConvEmbed，得到一个特征图\n",
+    "然后这个特征图会被reshape成token\n",
+    "这个token会组合上cls_token，一起送入堆叠Block中，输出token\n",
+    "最后会将这个token分离出cls_token和图片数据token，然后将图片数据reshape成图片数据的特征图\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VisionTransformer(nn.Layer):\n",
+    "    \"\"\" Vision Transformer with support for patch or hybrid CNN input stage\n",
+    "    \"\"\"\n",
+    "    def __init__(self,\n",
+    "                 patch_size=16,\n",
+    "                 patch_stride=16,\n",
+    "                 patch_padding=0,\n",
+    "                 in_chans=3,\n",
+    "                 embed_dim=768,\n",
+    "                 depth=12,\n",
+    "                 num_heads=12,\n",
+    "                 mlp_ratio=4.,\n",
+    "                 qkv_bias=False,\n",
+    "                 drop_rate=0.,\n",
+    "                 attn_drop_rate=0.,\n",
+    "                 drop_path_rate=0.,\n",
+    "                 act_layer=nn.GELU,\n",
+    "                 norm_layer=nn.LayerNorm,\n",
+    "                 init='trunc_norm',\n",
+    "                 **kwargs):\n",
+    "        super().__init__()\n",
+    "        self.num_features = self.embed_dim = embed_dim  # num_features for consistency with other models\n",
+    "\n",
+    "        self.rearrage = None\n",
+    "\n",
+    "        self.patch_embed = ConvEmbed(\n",
+    "            patch_size=patch_size,\n",
+    "            in_chans=in_chans,\n",
+    "            stride=patch_stride,\n",
+    "            padding=patch_padding,\n",
+    "            embed_dim=embed_dim,\n",
+    "            norm_layer=norm_layer\n",
+    "        )\n",
+    "\n",
+    "        with_cls_token = kwargs['with_cls_token']\n",
+    "        if with_cls_token:\n",
+    "            self.cls_token = nn.Parameter(\n",
+    "                paddle.zeros(1, 1, embed_dim)\n",
+    "            )\n",
+    "        else:\n",
+    "            self.cls_token = None\n",
+    "        if self.cls_token is not None:\n",
+    "            self.cls_token=paddle.nn.initializer.TruncatedNormal(std=0.02)\n",
+    "        self.pos_drop = nn.Dropout(p=drop_rate)\n",
+    "        dpr = [x.item() for x in paddle.linspace(0, drop_path_rate, depth)]  # stochastic depth decay rule\n",
+    "\n",
+    "        blocks = []\n",
+    "        for j in range(depth):\n",
+    "            blocks.append(\n",
+    "                Block(\n",
+    "                    dim_in=embed_dim,\n",
+    "                    dim_out=embed_dim,\n",
+    "                    num_heads=num_heads,\n",
+    "                    mlp_ratio=mlp_ratio,\n",
+    "                    qkv_bias=qkv_bias,\n",
+    "                    drop=drop_rate,\n",
+    "                    attn_drop=attn_drop_rate,\n",
+    "                    drop_path=dpr[j],\n",
+    "                    act_layer=act_layer,\n",
+    "                    norm_layer=norm_layer,\n",
+    "                    **kwargs\n",
+    "                )\n",
+    "            )\n",
+    "        self.blocks = nn.ModuleList(blocks)\n",
+    "\n",
+    "        \n",
+    "\n",
+    "        if init == 'xavier':\n",
+    "            self.apply(self._init_weights_xavier)\n",
+    "        else:\n",
+    "            self.apply(self._init_weights_trunc_normal)\n",
+    "\n",
+    "    def _init_weights_trunc_normal(self, m):\n",
+    "        if isinstance(m, nn.Linear):\n",
+    "            logging.info('=> init weight of Linear from trunc norm')\n",
+    "            m.weight=paddle.nn.initializer.TruncatedNormal(std=0.02)\n",
+    "            if m.bias is not None:\n",
+    "                logging.info('=> init bias of Linear to zeros')\n",
+    "                nn.init.constant_(m.bias, 0)\n",
+    "        elif isinstance(m, (nn.LayerNorm, nn.BatchNorm2d)):\n",
+    "            nn.init.constant_(m.bias, 0)\n",
+    "            nn.init.constant_(m.weight, 1.0)\n",
+    "\n",
+    "    def _init_weights_xavier(self, m):\n",
+    "        if isinstance(m, nn.Linear):\n",
+    "            logging.info('=> init weight of Linear from xavier uniform')\n",
+    "            nn.init.xavier_uniform_(m.weight)\n",
+    "            if m.bias is not None:\n",
+    "                logging.info('=> init bias of Linear to zeros')\n",
+    "                nn.init.constant_(m.bias, 0)\n",
+    "        elif isinstance(m, (nn.LayerNorm, nn.BatchNorm2d)):\n",
+    "            nn.init.constant_(m.bias, 0)\n",
+    "            nn.init.constant_(m.weight, 1.0)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.patch_embed(x)\n",
+    "        B, C, H, W = x.size()\n",
+    "\n",
+    "        x = rearrange(x, 'b c h w -> b (h w) c')\n",
+    "\n",
+    "        cls_tokens = None\n",
+    "        if self.cls_token is not None:\n",
+    "            # stole cls_tokens impl from Phil Wang, thanks\n",
+    "            cls_tokens = self.cls_token.expand(B, -1, -1)\n",
+    "            x = paddle.cat((cls_tokens, x), dim=1)\n",
+    "\n",
+    "        x = self.pos_drop(x)\n",
+    "\n",
+    "        for i, blk in enumerate(self.blocks):\n",
+    "            x = blk(x, H, W)\n",
+    "\n",
+    "        if self.cls_token is not None:\n",
+    "            cls_tokens, x = paddle.split(x, [1, H*W], 1)\n",
+    "        x = rearrange(x, 'b (h w) c -> b c h w', h=H, w=W)\n",
+    "\n",
+    "        return x, cls_tokens\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConvolutionalVisionTransformer(nn.Module):\n",
+    "    def __init__(self,\n",
+    "                 in_chans=3,\n",
+    "                 num_classes=1000,\n",
+    "                 act_layer=nn.GELU,\n",
+    "                 norm_layer=nn.LayerNorm,\n",
+    "                 init='trunc_norm',\n",
+    "                 spec=None):\n",
+    "        super().__init__()\n",
+    "        self.num_classes = num_classes\n",
+    "\n",
+    "        self.num_stages = spec['NUM_STAGES']\n",
+    "        for i in range(self.num_stages):\n",
+    "            kwargs = {\n",
+    "                'patch_size': spec['PATCH_SIZE'][i],\n",
+    "                'patch_stride': spec['PATCH_STRIDE'][i],\n",
+    "                'patch_padding': spec['PATCH_PADDING'][i],\n",
+    "                'embed_dim': spec['DIM_EMBED'][i],\n",
+    "                'depth': spec['DEPTH'][i],\n",
+    "                'num_heads': spec['NUM_HEADS'][i],\n",
+    "                'mlp_ratio': spec['MLP_RATIO'][i],\n",
+    "                'qkv_bias': spec['QKV_BIAS'][i],\n",
+    "                'drop_rate': spec['DROP_RATE'][i],\n",
+    "                'attn_drop_rate': spec['ATTN_DROP_RATE'][i],\n",
+    "                'drop_path_rate': spec['DROP_PATH_RATE'][i],\n",
+    "                'with_cls_token': spec['CLS_TOKEN'][i],\n",
+    "                'method': spec['QKV_PROJ_METHOD'][i],\n",
+    "                'kernel_size': spec['KERNEL_QKV'][i],\n",
+    "                'padding_q': spec['PADDING_Q'][i],\n",
+    "                'padding_kv': spec['PADDING_KV'][i],\n",
+    "                'stride_kv': spec['STRIDE_KV'][i],\n",
+    "                'stride_q': spec['STRIDE_Q'][i],\n",
+    "            }\n",
+    "\n",
+    "            stage = VisionTransformer(\n",
+    "                in_chans=in_chans,\n",
+    "                init=init,\n",
+    "                act_layer=act_layer,\n",
+    "                norm_layer=norm_layer,\n",
+    "                **kwargs\n",
+    "            )\n",
+    "            setattr(self, f'stage{i}', stage)\n",
+    "\n",
+    "            in_chans = spec['DIM_EMBED'][i]\n",
+    "\n",
+    "        dim_embed = spec['DIM_EMBED'][-1]\n",
+    "        self.norm = norm_layer(dim_embed)\n",
+    "        self.cls_token = spec['CLS_TOKEN'][-1]\n",
+    "\n",
+    "        # Classifier head\n",
+    "        self.head = nn.Linear(dim_embed, num_classes) if num_classes > 0 else nn.Identity()\n",
+    "        self.head.weight=paddle.nn.initializer.TruncatedNormal(std=0.02)\n",
+    "\n",
+    "    def init_weights(self, pretrained='', pretrained_layers=[], verbose=True):\n",
+    "        if os.path.isfile(pretrained):\n",
+    "            pretrained_dict = paddle.load(pretrained, map_location='cpu')\n",
+    "            logging.info(f'=> loading pretrained model {pretrained}')\n",
+    "            model_dict = self.state_dict()\n",
+    "            pretrained_dict = {\n",
+    "                k: v for k, v in pretrained_dict.items()\n",
+    "                if k in model_dict.keys()\n",
+    "            }\n",
+    "            need_init_state_dict = {}\n",
+    "            for k, v in pretrained_dict.items():\n",
+    "                need_init = (\n",
+    "                        k.split('.')[0] in pretrained_layers\n",
+    "                        or pretrained_layers[0] is '*'\n",
+    "                )\n",
+    "                if need_init:\n",
+    "                    if verbose:\n",
+    "                        logging.info(f'=> init {k} from {pretrained}')\n",
+    "                    if 'pos_embed' in k and v.size() != model_dict[k].size():\n",
+    "                        size_pretrained = v.size()\n",
+    "                        size_new = model_dict[k].size()\n",
+    "                        logging.info(\n",
+    "                            '=> load_pretrained: resized variant: {} to {}'\n",
+    "                            .format(size_pretrained, size_new)\n",
+    "                        )\n",
+    "\n",
+    "                        ntok_new = size_new[1]\n",
+    "                        ntok_new -= 1\n",
+    "\n",
+    "                        posemb_tok, posemb_grid = v[:, :1], v[0, 1:]\n",
+    "\n",
+    "                        gs_old = int(np.sqrt(len(posemb_grid)))\n",
+    "                        gs_new = int(np.sqrt(ntok_new))\n",
+    "\n",
+    "                        logging.info(\n",
+    "                            '=> load_pretrained: grid-size from {} to {}'\n",
+    "                            .format(gs_old, gs_new)\n",
+    "                        )\n",
+    "\n",
+    "                        posemb_grid = posemb_grid.reshape(gs_old, gs_old, -1)\n",
+    "                        zoom = (gs_new / gs_old, gs_new / gs_old, 1)\n",
+    "                        posemb_grid = paddle.ndimage.zoom(\n",
+    "                            posemb_grid, zoom, order=1\n",
+    "                        )\n",
+    "                        posemb_grid = posemb_grid.reshape(1, gs_new ** 2, -1)\n",
+    "                        v = paddle.tensor(\n",
+    "                            np.concatenate([posemb_tok, posemb_grid], axis=1)\n",
+    "                        )\n",
+    "\n",
+    "                    need_init_state_dict[k] = v\n",
+    "            self.load_state_dict(need_init_state_dict, strict=False)\n",
+    "    def forward_features(self, x):\n",
+    "        for i in range(self.num_stages):\n",
+    "            x, cls_tokens = getattr(self, f'stage{i}')(x)\n",
+    "\n",
+    "        if self.cls_token:\n",
+    "            x = self.norm(cls_tokens)\n",
+    "            x = paddle.squeeze(x)\n",
+    "        else:\n",
+    "            x = rearrange(x, 'b c h w -> b (h w) c')\n",
+    "            x = self.norm(x)\n",
+    "            x = paddle.mean(x, dim=1)\n",
+    "\n",
+    "        return x\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        x = self.forward_features(x)\n",
+    "        x = self.head(x)\n",
+    "\n",
+    "        return x\n",
+    "\n",
     "\n"
    ]
   }
