--- a/src/cvt_paddle.ipynb
+++ b/src/cvt_paddle.ipynb
@@ -19,8 +19,7 @@
     "from collections import OrderedDict\n",
     "\n",
     "import logging\n",
-    "import os\n",
-    "import scripy"
+    "import os"
    ]
   },
   {
@@ -150,9 +149,9 @@
     "\n",
     "    def _init_weights(self):\n",
     "        weight_attr = paddle.ParamAttr(\n",
-    "            initializer=paddle.nn.initializer.XavierUniform()) #default in pp: xavier\n",
+    "            initializer=nn.initializer.XavierUniform()) #default in pp: xavier\n",
     "        bias_attr = paddle.ParamAttr(\n",
-    "            initializer=paddle.nn.initializer.Normal(std=1e-6)) #default in pp: zero\n",
+    "            initializer=nn.initializer.Normal(std=1e-6)) #default in pp: zero\n",
     "        return weight_attr, bias_attr\n",
     "\n",
     "    def forward(self, x):\n",
@@ -300,7 +299,7 @@
     "                    bias=False,\n",
     "                    groups=dim_in\n",
     "                )),\n",
-    "                ('bn', nn.BatchNorm2d(dim_in)),\n",
+    "                ('bn', nn.BatchNorm2D(dim_in)),\n",
     "                ('rearrage', RearrangeLayer('b c h w -> b (h w) c')),\n",
     "            ]))\n",
     "        elif method == 'avg':\n",
@@ -361,7 +360,7 @@
     "        v =  PaddleRearrange(self.proj_v(v), 'b t (h d) -> b h t d', h=self.num_heads)\n",
     "\n",
     "        attn_score = paddle.einsum('bhlk,bhtk->bhlt', [q, k]) * self.scale # 先按照axis=3乘，后*scale，实现q*k/sqort(d_k),\n",
-    "        attn = paddle.nn.functional.softmax(attn_score, dim=-1)\n",
+    "        attn = nn.functional.softmax(attn_score, axis=-1)\n",
     "        attn = self.attn_drop(attn)\n",
     "        x = paddle.einsum('bhlt,bhtv->bhlv', [attn, v]) # 将attention得到概率值与value信息值相乘得到结果，结构是，b,h,t,d\n",
     "        x =  PaddleRearrange(x, 'b h t d -> b t (h d)')\n",
@@ -379,7 +378,10 @@
    "outputs": [],
    "source": [
     "class Block(nn.Layer):\n",
-    "\n",
+    "    ''' \n",
+    "    每一个Block都是\n",
+    "    token -> multihead attention ( reshape token to a grap) ->Mlp->token\n",
+    "    '''\n",
     "    def __init__(self,\n",
     "                 dim_in,\n",
     "                 dim_out,\n",
@@ -485,12 +487,12 @@
     "        with_cls_token = kwargs['with_cls_token']\n",
     "        if with_cls_token:\n",
     "            self.cls_token = nn.Parameter(\n",
-    "                paddle.zeros(1, 1, embed_dim)\n",
+    "                paddle.zeros(1, 1, embed_dim)   \n",
     "            )\n",
+    "            self.cls_token=nn.initializer.TruncatedNormal(std=0.02)\n",
     "        else:\n",
     "            self.cls_token = None\n",
-    "        if self.cls_token is not None:\n",
-    "            self.cls_token=paddle.nn.initializer.TruncatedNormal(std=0.02)\n",
+    "            \n",
     "        self.pos_drop = nn.Dropout(p=drop_rate)\n",
     "        dpr = [x.item() for x in paddle.linspace(0, drop_path_rate, depth)]  # stochastic depth decay rule\n",
     "\n",
@@ -523,13 +525,13 @@
     "    def _init_weights_trunc_normal(self, m):\n",
     "        if isinstance(m, nn.Linear):\n",
     "            logging.info('=> init weight of Linear from trunc norm')\n",
-    "            m.weight=paddle.nn.initializer.TruncatedNormal(std=0.02)\n",
+    "            m.weight=nn.initializer.TruncatedNormal(std=0.02)\n",
     "            if m.bias is not None:\n",
     "                logging.info('=> init bias of Linear to zeros')\n",
-    "                nn.init.constant_(m.bias, 0)\n",
-    "        elif isinstance(m, (nn.LayerNorm, nn.BatchNorm2d)):\n",
-    "            nn.init.constant_(m.bias, 0)\n",
-    "            nn.init.constant_(m.weight, 1.0)\n",
+    "                m.bias=nn.initializer.Constant(0)\n",
+    "        elif isinstance(m, (nn.LayerNorm, nn.BatchNorm2D)):\n",
+    "            m.bias=nn.initializer.Constant(0)\n",
+    "            m.weight=nn.initializer.Constant(1.0)\n",
     "\n",
     "    def _init_weights_xavier(self, m):\n",
     "        if isinstance(m, nn.Linear):\n",
@@ -537,10 +539,10 @@
     "            nn.init.xavier_uniform_(m.weight)\n",
     "            if m.bias is not None:\n",
     "                logging.info('=> init bias of Linear to zeros')\n",
-    "                nn.init.constant_(m.bias, 0)\n",
-    "        elif isinstance(m, (nn.LayerNorm, nn.BatchNorm2d)):\n",
-    "            nn.init.constant_(m.bias, 0)\n",
-    "            nn.init.constant_(m.weight, 1.0)\n",
+    "                m.bias=nn.initializer.Constant(0)\n",
+    "        elif isinstance(m, (nn.LayerNorm, nn.BatchNorm2D)):\n",
+    "            m.bias=nn.initializer.Constant(0)\n",
+    "            m.weight=nn.initializer.Constant(1.0)\n",
     "\n",
     "    def forward(self, x):\n",
     "        x = self.patch_embed(x)\n",
@@ -623,7 +625,7 @@
     "\n",
     "        # Classifier head\n",
     "        self.head = nn.Linear(dim_embed, num_classes) if num_classes > 0 else nn.Identity()\n",
-    "        self.head.weight=paddle.nn.initializer.TruncatedNormal(std=0.02)\n",
+    "        self.head.weight=nn.initializer.TruncatedNormal(std=0.02)\n",
     "\n",
     "    def init_weights(self, pretrained='', pretrained_layers=[], verbose=True):\n",
     "        if os.path.isfile(pretrained):\n",
@@ -670,7 +672,7 @@
     "                            posemb_grid, zoom, order=1\n",
     "                        )\n",
     "                        posemb_grid = posemb_grid.reshape(1, gs_new ** 2, -1)\n",
-    "                        v = paddle.tensor(\n",
+    "                        v = paddle.to_tensor(\n",
     "                            np.concatenate([posemb_tok, posemb_grid], axis=1)\n",
     "                        )\n",
     "\n",
