--- a/src/cvt_paddle.ipynb
+++ b/src/cvt_paddle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,17 @@
     "def PaddleRearrange(tensor:paddle.Tensor, pattern: str, **axes_lengths) -> paddle.Tensor:\n",
     "    x=np.array(tensor)\n",
     "    return paddle.to_tensor(rearrange(x,pattern,**axes_lengths))\n",
-    "class RearrangeLayer(nn.layer):\n",
-    "    def forword(sef,x:paddle.Tensor,pattern: str, **axes_lengths):\n",
-    "        return PaddleRearrange(x,pattern,**axes_lengths)"
+    "class RearrangeLayer(nn.Layer):\n",
+    "    def __init__(self,pattern) :\n",
+    "        super().__init__()\n",
+    "        self.pattern=pattern\n",
+    "    def forword(self,x:paddle.Tensor):\n",
+    "        return PaddleRearrange(x,self.pattern)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,11 +211,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Attention(nn.Module):\n",
+    "class Attention(nn.Layer):\n",
     "    \"\"\" Attention module\n",
     "    Attributes:\n",
     "        dim_in: numebr of input dim\n",
@@ -341,9 +344,9 @@
     "            v =  PaddleRearrange(x, 'b c h w -> b (h w) c')\n",
     "\n",
     "        if self.with_cls_token:\n",
-    "            q = paddle.cat((cls_token, q), dim=1)\n",
-    "            k = paddle.cat((cls_token, k), dim=1)\n",
-    "            v = paddle.cat((cls_token, v), dim=1)\n",
+    "            q = paddle.gather(cls_token, q, dim=1)\n",
+    "            k = paddle.gather(cls_token, k, dim=1)\n",
+    "            v = paddle.gather(cls_token, v, dim=1)\n",
     "\n",
     "        return q, k, v\n",
     "\n",
@@ -373,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -486,9 +489,6 @@
     "\n",
     "        with_cls_token = kwargs['with_cls_token']\n",
     "        if with_cls_token:\n",
-    "            self.cls_token = nn.Parameter(\n",
-    "                paddle.zeros(1, 1, embed_dim)   \n",
-    "            )\n",
     "            self.cls_token=nn.initializer.TruncatedNormal(std=0.02)\n",
     "        else:\n",
     "            self.cls_token = None\n",
@@ -513,7 +513,7 @@
     "                    **kwargs\n",
     "                )\n",
     "            )\n",
-    "        self.blocks = nn.ModuleList(blocks)\n",
+    "        self.blocks = nn.LayerList(blocks)\n",
     "\n",
     "        \n",
     "\n",
@@ -554,7 +554,7 @@
     "        if self.cls_token is not None:\n",
     "            # stole cls_tokens impl from Phil Wang, thanks\n",
     "            cls_tokens = self.cls_token.expand(B, -1, -1)\n",
-    "            x = paddle.cat((cls_tokens, x), dim=1)\n",
+    "            x = paddle.gather(cls_tokens, x, dim=1)\n",
     "\n",
     "        x = self.pos_drop(x)\n",
     "\n",
@@ -570,11 +570,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class ConvolutionalVisionTransformer(nn.Module):\n",
+    "class ConvolutionalVisionTransformer(nn.Layer):\n",
     "    def __init__(self,\n",
     "                 in_chans=3,\n",
     "                 num_classes=1000,\n",
@@ -699,6 +699,28 @@
     "        return x\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9648/987914161.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mConvolutionalVisionTransformer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9648/1339407741.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, in_chans, num_classes, act_layer, norm_layer, init, spec)\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_classes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_classes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_stages\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspec\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'NUM_STAGES'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_stages\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             kwargs = {\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+     ]
+    }
+   ],
+   "source": [
+    "x=ConvolutionalVisionTransformer()"
    ]
   }
  ],
