--- a/src/cvt_paddle.ipynb
+++ b/src/cvt_paddle.ipynb
@@ -2,16 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
     "import paddle\n",
     "import paddle.nn as nn\n",
     "\n",
-    "\n",
     "from einops import rearrange\n",
-    "from einops.layers.torch import Rearrange\n",
     "\n",
     "from collections.abc import Iterable\n",
     "from numpy import repeat\n",
@@ -19,12 +17,14 @@
     "from collections import OrderedDict\n",
     "\n",
     "import logging\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "from config import get_config "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
     "    x=np.array(tensor)\n",
     "    return paddle.to_tensor(rearrange(x,pattern,**axes_lengths))\n",
     "class RearrangeLayer(nn.Layer):\n",
-    "    def __init__(self,pattern) :\n",
+    "    def __init__(self, pattern):\n",
     "        super().__init__()\n",
     "        self.pattern=pattern\n",
     "    def forword(self,x:paddle.Tensor):\n",
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -299,11 +299,11 @@
     "                    kernel_size=kernel_size,\n",
     "                    padding=padding,\n",
     "                    stride=stride,\n",
-    "                    bias=False,\n",
+    "                    bias_attr=False,\n",
     "                    groups=dim_in\n",
     "                )),\n",
     "                ('bn', nn.BatchNorm2D(dim_in)),\n",
-    "                ('rearrage', RearrangeLayer('b c h w -> b (h w) c')),\n",
+    "                ('rearrage', RearrangeLayer()),\n",
     "            ]))\n",
     "        elif method == 'avg':\n",
     "            proj = nn.Sequential(OrderedDict([\n",
@@ -313,7 +313,7 @@
     "                    stride=stride,\n",
     "                    ceil_mode=True\n",
     "                )),\n",
-    "                ('rearrage', RearrangeLayer('b c h w -> b (h w) c')),\n",
+    "                ('rearrage', RearrangeLayer()),\n",
     "            ]))\n",
     "        elif method == 'linear':\n",
     "            proj = None\n",
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,27 +585,27 @@
     "        super().__init__()\n",
     "        self.num_classes = num_classes\n",
     "\n",
-    "        self.num_stages = spec['NUM_STAGES']\n",
+    "        self.num_stages = spec.NUM_STAGES\n",
     "        for i in range(self.num_stages):\n",
     "            kwargs = {\n",
-    "                'patch_size': spec['PATCH_SIZE'][i],\n",
-    "                'patch_stride': spec['PATCH_STRIDE'][i],\n",
-    "                'patch_padding': spec['PATCH_PADDING'][i],\n",
-    "                'embed_dim': spec['DIM_EMBED'][i],\n",
-    "                'depth': spec['DEPTH'][i],\n",
-    "                'num_heads': spec['NUM_HEADS'][i],\n",
-    "                'mlp_ratio': spec['MLP_RATIO'][i],\n",
-    "                'qkv_bias': spec['QKV_BIAS'][i],\n",
-    "                'drop_rate': spec['DROP_RATE'][i],\n",
-    "                'attn_drop_rate': spec['ATTN_DROP_RATE'][i],\n",
-    "                'drop_path_rate': spec['DROP_PATH_RATE'][i],\n",
-    "                'with_cls_token': spec['CLS_TOKEN'][i],\n",
-    "                'method': spec['QKV_PROJ_METHOD'][i],\n",
-    "                'kernel_size': spec['KERNEL_QKV'][i],\n",
-    "                'padding_q': spec['PADDING_Q'][i],\n",
-    "                'padding_kv': spec['PADDING_KV'][i],\n",
-    "                'stride_kv': spec['STRIDE_KV'][i],\n",
-    "                'stride_q': spec['STRIDE_Q'][i],\n",
+    "                'patch_size': spec.PATCH_SIZE,\n",
+    "                'patch_stride': spec.PATCH_STRIDE ,\n",
+    "                'patch_padding': spec.PATCH_PADDING ,\n",
+    "                'embed_dim': spec.DIM_EMBED ,\n",
+    "                'depth': spec.DEPTH ,\n",
+    "                'num_heads': spec.NUM_HEADS ,\n",
+    "                'mlp_ratio': spec.MLP_RATIO ,\n",
+    "                'qkv_bias': spec.QKV_BIAS ,\n",
+    "                'drop_rate': spec.DROP_RATE ,\n",
+    "                'attn_drop_rate': spec.ATTN_DROP_RATE ,\n",
+    "                'drop_path_rate': spec.DROP_PATH_RATE,\n",
+    "                'with_cls_token': spec.WITH_CLS_TOKEN,\n",
+    "                'method': spec.QKV_PROJ_METHOD,\n",
+    "                'kernel_size': spec.KERNEL_QKV ,\n",
+    "                'padding_q': spec.PADDING_Q ,\n",
+    "                'padding_kv': spec.PADDING_KV ,\n",
+    "                'stride_kv': spec.STRIDE_KV ,\n",
+    "                'stride_q': spec.STRIDE_Q ,\n",
     "            }\n",
     "\n",
     "            stage = VisionTransformer(\n",
@@ -617,11 +617,11 @@
     "            )\n",
     "            setattr(self, f'stage{i}', stage)\n",
     "\n",
-    "            in_chans = spec['DIM_EMBED'][i]\n",
+    "            in_chans = spec.DIM_EMBED\n",
     "\n",
-    "        dim_embed = spec['DIM_EMBED'][-1]\n",
+    "        dim_embed = spec.DIM_EMBED\n",
     "        self.norm = norm_layer(dim_embed)\n",
-    "        self.cls_token = spec['CLS_TOKEN'][-1]\n",
+    "        self.cls_token = spec.CLS_TOKEN\n",
     "\n",
     "        # Classifier head\n",
     "        self.head = nn.Linear(dim_embed, num_classes) if num_classes > 0 else nn.Identity()\n",
@@ -703,24 +703,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def generate_model(config):\n",
+    "    if config.MODEL.ACT_LAYER == 'nn.GELU':\n",
+    "        act_layer=nn.GELU\n",
+    "    if config.MODEL.NORM_LAYER == 'nn.LayerNorm':\n",
+    "        norm_layer=nn.LayerNorm\n",
+    "    model=ConvolutionalVisionTransformer(\n",
+    "                 in_chans=config.DATA.IN_CHANS,\n",
+    "                 num_classes=config.MODEL.NUM_CLASSES,\n",
+    "                 act_layer=act_layer ,\n",
+    "                 norm_layer=norm_layer,\n",
+    "                 init=config.MODEL.INIT ,\n",
+    "                 spec=config.SPEC)\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not subscriptable",
+     "ename": "AssertionError",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9648/987914161.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mConvolutionalVisionTransformer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9648/1339407741.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, in_chans, num_classes, act_layer, norm_layer, init, spec)\u001b[0m\n\u001b[0;32m     10\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_classes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnum_classes\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_stages\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspec\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'NUM_STAGES'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnum_stages\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m             kwargs = {\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object is not subscriptable"
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/110647069.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mconfig\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mget_config\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgenerate_model\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/3117067416.py\u001b[0m in \u001b[0;36mgenerate_model\u001b[1;34m(config)\u001b[0m\n\u001b[0;32m     10\u001b[0m                  \u001b[0mnorm_layer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnorm_layer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m                  \u001b[0minit\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mMODEL\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mINIT\u001b[0m \u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m                  spec=config.SPEC)\n\u001b[0m\u001b[0;32m     13\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mmodel\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/1083557170.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, in_chans, num_classes, act_layer, norm_layer, init, spec)\u001b[0m\n\u001b[0;32m     38\u001b[0m                 \u001b[0mact_layer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mact_layer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     39\u001b[0m                 \u001b[0mnorm_layer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnorm_layer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 40\u001b[1;33m                 \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     41\u001b[0m             )\n\u001b[0;32m     42\u001b[0m             \u001b[0msetattr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34mf'stage{i}'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/2472049776.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, patch_size, patch_stride, patch_padding, in_chans, embed_dim, depth, num_heads, mlp_ratio, qkv_bias, drop_rate, attn_drop_rate, drop_path_rate, act_layer, norm_layer, init, **kwargs)\u001b[0m\n\u001b[0;32m     56\u001b[0m                     \u001b[0mact_layer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mact_layer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     57\u001b[0m                     \u001b[0mnorm_layer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnorm_layer\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 58\u001b[1;33m                     \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     59\u001b[0m                 )\n\u001b[0;32m     60\u001b[0m             )\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/4028259290.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, dim_in, dim_out, num_heads, mlp_ratio, qkv_bias, drop, attn_drop, drop_path, act_layer, norm_layer, **kwargs)\u001b[0m\n\u001b[0;32m     23\u001b[0m         self.attn = Attention(\n\u001b[0;32m     24\u001b[0m             \u001b[0mdim_in\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdim_out\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnum_heads\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mqkv_bias\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattn_drop\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdrop\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 25\u001b[1;33m             \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     26\u001b[0m         )\n\u001b[0;32m     27\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mdrop_path\u001b[0m\u001b[1;33m>\u001b[0m\u001b[1;36m0.\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/1910680318.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, dim_in, dim_out, num_heads, qkv_bias, attn_drop, proj_drop, method, kernel_size, stride_kv, stride_q, padding_kv, padding_q, with_cls_token, **kwargs)\u001b[0m\n\u001b[0;32m     45\u001b[0m         self.conv_proj_q = self._build_projection(\n\u001b[0;32m     46\u001b[0m             \u001b[0mdim_in\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdim_out\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkernel_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpadding_q\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m             \u001b[0mstride_q\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'linear'\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'avg'\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m         )\n\u001b[0;32m     49\u001b[0m         self.conv_proj_k = self._build_projection(\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_14996/1910680318.py\u001b[0m in \u001b[0;36m_build_projection\u001b[1;34m(self, dim_in, dim_out, kernel_size, padding, stride, method)\u001b[0m\n\u001b[0;32m     87\u001b[0m                 )),\n\u001b[0;32m     88\u001b[0m                 \u001b[1;33m(\u001b[0m\u001b[1;34m'bn'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mBatchNorm2D\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdim_in\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 89\u001b[1;33m                 \u001b[1;33m(\u001b[0m\u001b[1;34m'rearrage'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRearrangeLayer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     90\u001b[0m             ]))\n\u001b[0;32m     91\u001b[0m         \u001b[1;32melif\u001b[0m \u001b[0mmethod\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'avg'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\cvt\\lib\\site-packages\\paddle\\fluid\\dygraph\\container.py\u001b[0m in \u001b[0;36m__init__\u001b[1;34m(self, *layers)\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m             \u001b[1;32mfor\u001b[0m \u001b[0midx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlayer\u001b[0m \u001b[1;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0madd_sublayer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0midx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlayer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\cvt\\lib\\site-packages\\paddle\\fluid\\dygraph\\layers.py\u001b[0m in \u001b[0;36madd_sublayer\u001b[1;34m(self, name, sublayer)\u001b[0m\n\u001b[0;32m    969\u001b[0m                     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprefix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlayer\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    970\u001b[0m         \"\"\"\n\u001b[1;32m--> 971\u001b[1;33m         \u001b[1;32massert\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msublayer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcore\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mLayer\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0msublayer\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    972\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    973\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_sub_layers\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msublayer\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "x=ConvolutionalVisionTransformer()"
+    "config=get_config()\n",
+    "x=generate_model(config)"
    ]
   }
  ],
