--- a/question/q2.md
+++ b/question/q2.md
@@ -1,15 +1,35 @@
-## weight 长度不一样
+## 同样的输出到一个同样的层，经过同样的weight和bias。完全不一样
+
 ```python
-for i,value in torch_model.state_dict().items():
-    torch_array.append((i,value.shape))
-    file_torch.write(i)
-    file_torch.write('\n')
+class LayerNorm(nn.LayerNorm):
+    """Subclass torch's LayerNorm to handle fp16."""
 
-for i,value in paddle_model.state_dict().items():
-    paddle_array.append((i,value.shape))
-    file_paddle.write(i)
-    file_paddle.write('\n')
+    def forward(self, x: paddle.Tensor):
+        orig_type = x.dtype
+        ret = super().forward(x.type(paddle.float32))
+        return ret.type(orig_type)
+
+····
+self.norm = norm_layer(dim_embed)#norm_layer=LayerNorm
+····
+#一样的输入
+x = self.norm(cls_tokens)
+#不一样的输出
+print(self.norm.weight[:3])
+print(self.norm.bias[:3])
 ```
-torch 的 state_dict()有458 行，而paddle的有419行。感觉应该影响不大。
+torch
+```python
+torch
+tensor([1., 1., 1.], grad_fn=<SliceBackward0>)
+tensor([0., 0., 0.], grad_fn=<SliceBackward0>)
+```
+paddle
+```python
+Tensor(shape=[3], dtype=float32, place=CPUPlace, stop_gradient=False,
+       [1., 1., 1.])
+Tensor(shape=[3], dtype=float32, place=CPUPlace, stop_gradient=False,
+       [0., 0., 0.])
+```
 
-## 我的问题是，我并不清楚，什么时候需要转置
+## 多出了.num_batches_tracked，paddle没有这个weight，详细打印在`weight/paddle.txt` 和`weight/torch.txt`
