--- a/question/q2.md
+++ b/question/q2.md
@@ -33,3 +33,5 @@ Tensor(shape=[3], dtype=float32, place=CPUPlace, stop_gradient=False,
 ```
 
 ## 多出了.num_batches_tracked，paddle没有这个weight，详细打印在`weight/paddle.txt` 和`weight/torch.txt`
+
+其实感觉没什么印象，是用来计数的一个weight
