删除无用文件

--- a/test_have_weight.ipynb
+++ b/test_have_weight.ipynb
@@ -187,6 +187,8 @@
     "import torchvision.models as models\n",
     "from cvt import generate_model\n",
     "from cvt_torch import get_cls_model\n",
+    "\n",
+    "\n",
     "model_name = 'CvT-13-224x224-IN-1k.pth'\n",
     "\n",
     "config=get_config('./config_cvt/config.yaml')\n",
@@ -202,21 +204,12 @@
     "torch_model = torch_model.to(device)\n",
     "torch_model.eval()\n",
     "file_debug=open('debug.txt','w')\n",
-    "# convert weights\n",
     "\n",
-    "\n",
-    "# check correctness\n",
-    "x = np.random.randn(2, 3, 224, 224).astype('float32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#file_torch=open('weight/torch.txt','w')\n",
-    "#file_paddle=open('weight/paddle.txt','w')\n"
+    "x = np.random.randn(2, 3, 224, 224).astype('float32')\n",
+    "x_paddle = paddle.to_tensor(x)\n",
+    "x_torch = torch.Tensor(x)\n",
+    "paddle.set_printoptions(4)\n",
+    "torch.set_printoptions(4)\n"
    ]
   },
   {
@@ -320,19 +313,7 @@
    "outputs": [],
    "source": [
     "paddle_model = convert(torch_model, paddle_model)\n",
-    "x_paddle = paddle.to_tensor(x)\n",
-    "x_torch = torch.Tensor(x)\n",
-    "paddle.set_printoptions(4)\n",
-    "torch.set_printoptions(4)\n",
-    "out_torch = torch_model(x_torch)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "out_torch = torch_model(x_torch)\n",
     "out_paddle = paddle_model(x_paddle)"
    ]
   },
